# normativa-dev

./: .gitignore  .mcp.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: analista-dominio.md  dev-contributor.md  dev-docs-writer.md  dev-domain-builder.md  dev-releaser.md  dev-tester.md  extractor-articulos.md  investigador-legal.md  monitor-cambios.md  redactor-informes.md  verificador-cumplimiento.md
.claude/skills/: api-boe-referencia.md  dev-release-process.md  dev-testing-patterns.md  dominio-autonomos.md  dominio-digital.md  dominio-fiscal.md  dominio-laboral.md  dominio-mercantil.md  dominio-proteccion-datos.md  dominio-vivienda.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_domain.md
.github/workflows/: docs.yml  release.yml  test.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: boe-api.md  tools.md
docs/dev/: agents-and-skills.md  architecture.md  boe-api-internals.md  domain-authoring.md  eu-integration.md  http-transport.md  index.md  testing.md
docs/domains/: autonomos.md  digital.md  fiscal.md  index.md  laboral.md  mercantil.md  proteccion-datos.md  vivienda.md
docs/guide/: agents.md  cli.md  http-api.md  mcp.md  quickstart.md
src/normativa/: __init__.py  __main__.py  api.py  boe_client.py  cache.py  cli.py  registry.py  server.py  xml_parser.py
src/normativa/domains/: __init__.py  _base.py  autonomos.py  (+6 more)
tests/: conftest.py  test_cache.py  test_registry.py  test_xml_parser.py
tests/test_tools/: test_metadata.py  test_search.py
(+7 files in other folders)
