[project]
name = "normativa"
version = "0.1.0"
description = "Legislacion espanola consolidada con dominios tematicos — MCP Server + CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "InnovaOrigen", email = "dev@innovaorigen.com" },
]
keywords = ["boe", "legislacion", "espana", "mcp", "derecho", "legal", "leyes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "mcp>=1.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
normativa = "normativa.cli:main"

[project.urls]
Homepage = "https://normativa.dev"
Documentation = "https://normativa.dev/docs"
Repository = "https://github.com/ioseobcn/normativa-dev"
Issues = "https://github.com/ioseobcn/normativa-dev/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/normativa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mkdocs-material>=9.0",
]
